<resources>
    <string name="app_name">My TV Show</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_sign_in_short">Sign in canceled</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_out">Sign Out</string>
    <string name="title_serie_list">Series</string>
    <string name="title_serie_detail">Serie Detail</string>
    <string name="search_title">Search</string>
    <string name="seasons">seasons</string>
    <string name="search_hint">Search for your show</string>
    <string name="popular_title">Popular TV Shows</string>
    <string name="favorite_title">Favorite Shows</string>
    <string name="appwidget_title">Favorite shows airing this week</string>
    <string name="add_widget">Add widget</string>
    <string name="refresh_button">Refresh button</string>
    <string name="no_favorites">No Favorites</string>
    <string name="no_favorites_widget_message">None of your favorite shows is on air this week. Try to add some new favorite shows!</string>
    <string name="calendar_image">Calendar image</string>
    <string name="rating_star_image">Rating Star image</string>
    <string name="slider_for_serie_backdrop">Slider for serie backdrop</string>
    <string name="serie_banner">Serie Banner</string>
</resources>
