<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/appwidget_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/appwidget_title"
            tools:text="@string/appwidget_title"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            android:layout_weight="0.8"/>

        <ImageButton
            android:id="@+id/widget_refresh_iv"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.2"
            android:padding="4dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/refresh_button"
            android:src="@drawable/ic_refresh_black_24dp" />



    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/widget_no_favorites_tv"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_favorites_widget_message"
            android:textSize="24sp"
            android:layout_margin="16dp"
            android:visibility="gone"/>

        <ListView
            android:id="@+id/app_widget_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>



</LinearLayout>